# Cognigraph

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: .gitkeep
scripts/: generate_logs.py
src/agents/: graph_search.py  planner.py  state.py  synthesizer.py  vector_search.py  workflow.py
src/api/: main.py
src/ingestion/: pipeline.py
src/llm/: client.py  serve.py
src/utils/: logger.py
tests/: test_agents.py  test_api.py
