[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cognigraph"
version = "0.1.0"
description = "Enterprise GraphRAG system with Hybrid Search (Qdrant + Neo4j) and Ray Serve"
authors = ["AI Architect <architect@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
langgraph = "^0.0.10"
neo4j = "^5.16.0"
qdrant-client = "^1.7.0"
ray = {extras = ["serve"], version = "^2.9.0"}
vllm = "^0.2.7" # Note: Usually Linux only. For Mac/Windows dev, might need exclusion or conditional.
boto3 = "^1.34.0" # For S3 mocking
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
flake8 = "^7.0.0"
